--- a/src/DockerTesting.Web.API/DockerTesting.Web.API.csproj
+++ b/src/DockerTesting.Web.API/DockerTesting.Web.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,7 @@
     <DockerfileContext>..\..</DockerfileContext>
     <DockerfileFile>..\..\build\docker\Dockerfile.web</DockerfileFile>
     <DockerComposeProjectPath>..\..\build\docker-compose\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>2a4b3815-568a-4162-977e-04137039ad52</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +22,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
+    <InternalsVisibleTo Include="$(AssemblyName).ComponentTests" />
     <InternalsVisibleTo Include="$(AssemblyName).UnitTests" />
   </ItemGroup>
 
